# sigil

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  sigil.pc.in
assets/configs/: sigilrc
assets/docs/: sigil-api-guide.md
src/: sigil.cpp  sigil.h
src/apps/: gbgen.cpp  tools.cpp  xorit.cpp
src/core/: iocommon.cpp  iocommon.h  log.cpp  log.h  parser.h  system.cpp  system.h  utils.cpp  utils.h  virtual-machine.cpp  virtual-machine.h
src/engine/: ntt.cpp  ntt.h  runtime.cpp  runtime.h
src/kernel/: ksigil.c
src/net/: server.cpp  server.h  station.cpp  station.h
src/render/: graphics.cpp  graphics.h  std.h  visor.cpp  visor.h  vulkan.cpp  vulkan.h  window.cpp  window.h
src/scripts/: arch-update.sh  backup.sh  bsort.sh  build.sh  cleanup.sh  dmain-get-state.sh  dmain-push-state.sh  dwm.sh  get-pacman-mirrors.sh  lanctl.sh  pfstamp.sh  proton-ge-autoinstall.sh  run-sda-vm.sh  sigil.sh  wlx64.sh
src/shaders/: shader0.frag  shader0.vert
src/sound/: player.cpp  player.h
src/tests/: graphics.cpp  initialization.cpp  library.cpp  networking.cpp  parser.cpp  performance.cpp  security.cpp
src/utils/: generic.cpp  generic.h  log.cpp  log.h  math.h  rng.h  text.cpp  text.h
src/vm/: core.cpp  core.h  event.h  iocommon.cpp  iocommon.h  node.cpp  node.h  parser.h  system.cpp  system.h
